--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
+    "daisyui": "^2.46.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "framer-motion": "^8.0.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "stripe": "^11.5.0",
+    "styled-components": "^5.3.6",
+    "urql": "^3.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
